Adding new functions
Added new buttons "Rain/Rain Stop/Drain",
Added stopRain() function
Added comments on what I need needs revisions

--- a/style.css
+++ b/style.css
@@ -34,8 +34,12 @@
   animation-timing-function: linear;
 }
 
-button#drain {
+#rainDrop0 {
+  display: none;
+}
+
+#buttons {
   position: absolute;
   bottom: 0px;
-  left: 50%;
+  margin: 1rem;
 }
