--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@
 
 }
 
-/* @keyframes drainAnimation {
+@keyframes drainAnimation {
+  0% {height: 999px}
   100% {height: 0px;}
-} */
+}
 
 body {
   background-color: #6666aa;
@@ -57,12 +58,12 @@ body {
   transition: visibility 0s 0.4s, opacity 0.4s linear;
 }
 
-/* .drain {
+.drain {
   animation-name: drainAnimation;
   animation-duration: 5;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
-} */
+}
 
 .rainDrop {
   width: 3px;
